Fixed alignment and WIP animation

--- a/src/components/Proces/proces.scss
+++ b/src/components/Proces/proces.scss
@@ -1,63 +1,83 @@
-.bubble{
+.bubbleContainer{
+  @apply w-full;
+  @apply mx-auto;
   @apply flex;
-  @apply items-center;
-  @apply w-4/5;
-  @apply p-16;
-  @apply text-white;
-  @apply bg-main;
-  @apply my-8;
-  position: relative;
-  border-radius: 80px;
+  @apply justify-center;
 
-  h3{
-    @apply font-bold;
+  .bubbleGroup{
+    @apply w-1/3;
+    @apply flex; 
+    @apply flex-wrap;
+    @apply self-start;
   }
 
-  .procesStep{
-    @apply uppercase;
-    @apply text-4xl;
-    @apply text-white;
-    @apply font-bold;
-  }
-
-  p{
-    @apply text-white;
-    @apply text-base;
-  }
-
-  .icon{
-    @apply text-main;
-    @apply bg-white;
+  .bubble{
+    @apply flex;
+    @apply items-center;
+    @apply w-full;
     @apply p-16;
-    border-radius: 100%;
+    @apply text-white;
+    @apply bg-main;
+    @apply my-8;
+    @apply ml-auto;
+    position: relative;
+    border-radius: 80px;
+    transition: 0.4s cubic-bezier(.02,.87,.73,1.26);
+    &:hover{
+      transform: scale(1.2);
+    }
+    h3{
+      @apply font-bold;
+    }
+
+    .procesStep{
+      @apply uppercase;
+      @apply text-4xl;
+      @apply text-white;
+      @apply font-bold;
+    }
+
+    p{
+      @apply text-white;
+      @apply text-base;
+    }
+
+    .icon{
+      @apply text-main;
+      @apply bg-white;
+      @apply p-16;
+      border-radius: 100%;
+    }
   }
+  .bubble1, .bubble2, .bubble3{
+    @apply text-right;
+  }
+  .bubble4, .bubble5, .bubble6{
+    @apply text-left;
+  }
+  .bubble1, .bubble3{
+    @apply relative;
+    left: 30px;
+  }
+  .bubble4, .bubble6{
+    @apply relative;
+    right: 30px;
+  }
+  .bubble1, .bubble3, .bubble4, .bubble6{
+    background-color: #3DB0D4;
+  }
+  .bubble1 .icon, .bubble3 .icon, .bubble4 .icon, .bubble6 .icon{
+    color: #3DB0D4;
+  }
+  
 }
 
-.bubble1, .bubble2, .bubble3{
-  @apply text-right;
-}
-.bubble4, .bubble5, .bubble6{
-  @apply text-left;
-}
-.bubble1, .bubble3{
-  @apply relative;
-  left: 30px;
-}
-.bubble4, .bubble6{
-  @apply relative;
-  right: 30px;
-}
-.bubble1, .bubble3, .bubble4, .bubble6{
-  background-color: #3DB0D4;
-}
-.bubble1 .icon, .bubble3 .icon, .bubble4 .icon, .bubble6 .icon{
-  color: #3DB0D4;
-}
 
 
 .logo{
   width: 200px;
   @apply mx-8;
+  @apply self-center;
 }
 
 .bubble::after {
